complete token